New entries should be added at the top

2004-06-07 Fixed several problems with log ticks and scaling - JDH

2004-06-07 Fixed width/height issues for images - JDH

2004-06-03 Fixed draw_if_interactive bug for semilogx; 

2004-06-02 Fixed text clipping to clip to axes - JDH

2004-06-02 Fixed leading newline text and multiple newline text - JDH

2004-06-02 Fixed plot_date to return lines - JDH

2004-06-01 Fixed plot to work with x or y having shape N,1 or 1,N - JDH

2004-05-31 Added renderer markeredgewidth attribute of Line2D. - ADS


2004-05-29 Fixed tick label clipping to work with navigation.

2004-05-28 Added renderer grouping commands to support groups in
           SVG/PS. - JDH

2004-05-28 Fixed, this time I really mean it, the singleton plot
           plot([0]) scaling bug; Fixed Flavio's shape = N,1 bug - JDH

2004-05-28 added colorbar - JDH

2004-05-28 Made some changes to the matplotlib.colors.Colormap to
           propertly support clim - JDH

-----------------------------------------------------------------
2004-05-27 0.54.1 released

2004-05-27 Lots of small bug fixes: rotated text at negative angles,
           errorbar capsize and autoscaling, right tick label
           position, gtkagg on win98, alpha of figure background,
           singleton plots - JDH

2004-05-26 Added Gary's errorbar stuff and made some fixes for length
           one plots and constant data plots - JDH

2004-05-25 Tweaked TkAgg backend so that canvas.draw() works
	   more like the other backends.  Fixed a bug resulting
	   in 2 draws per figure mangager show().      - JTM

------------------------------------------------------------
2004-05-19 0.54 released 

2004-05-18 Added newline seperated text with rotations to text.Text
           layout - JDH

2004-05-16 Added fast pcolor using PolyCollections.  - JDH

2004-05-14 Added fast polygon collections - changed scatter to use
           them.  Added multiple symbols to scatter.  10x speedup on