@@ -1,48 +1,127 @@
 /* A python interface to freetype2 */
 #ifndef _FT2FONT_H
 #define _FT2FONT_H
-#define MAXGLYPHS 1000
+#include <iostream>
+#include <vector>
+#include <string>
+#include <cmath>
+#include <utility>
 
-#include "Python.h"
+extern "C" {
 #include <ft2build.h>
 #include FT_FREETYPE_H
 #include FT_GLYPH_H
 #include FT_SFNT_NAMES_H
+}
+#include "CXX/Extensions.hxx"
+
 
 // the freetype string renderered into a width, height buffer
-typedef struct {
+class FT2Image {
+public:
+  FT2Image();
+  ~FT2Image();
   unsigned char *buffer;
   unsigned long width;
   unsigned long height;
   int offsetx, offsety;
-} FT2_Image;
-
-typedef struct {
-  PyObject_HEAD
-  PyObject	*x_attr;	        /* Attributes dictionary */
-  int glyph_num;
-} GlyphObject;
+};
 
 
-typedef struct {
-  PyObject_HEAD
-  PyObject	*x_attr;	        /* Attributes dictionary */
+class Glyph : public Py::PythonExtension<Glyph> {
+public:
+  Glyph( FT_Face, FT_Glyph, unsigned int);
+  ~Glyph();
+  int setattr( const char *_name, const Py::Object &value );
+  Py::Object getattr( const char *_name );
+  static void init_type(void);
+  int num;
+private:
+  Py::Dict __dict__;
+};
+
+class FT2Font : public Py::PythonExtension<FT2Font> {
+
+public:
+  FT2Font(std::string);
+  ~FT2Font();
+  static void init_type(void);
+  Py::Object set_bitmap_size(const Py::Tuple & args);
+  Py::Object clear(const Py::Tuple & args);
+  Py::Object set_size(const Py::Tuple & args);
+  Py::Object set_text(const Py::Tuple & args);
+  Py::Object get_glyph(const Py::Tuple & args);
+  Py::Object get_num_glyphs(const Py::Tuple & args);
+  Py::Object load_char(const Py::Tuple & args);
+  Py::Object get_width_height(const Py::Tuple & args);
+  Py::Object write_bitmap(const Py::Tuple & args);
+  Py::Object draw_rect(const Py::Tuple & args);
+  Py::Object image_as_str(const Py::Tuple & args);
+  Py::Object draw_glyphs_to_bitmap(const Py::Tuple & args);
+  Py::Object draw_glyph_to_bitmap(const Py::Tuple & args);
+  Py::Object get_sfnt_name(const Py::Tuple & args);
+  int setattr( const char *_name, const Py::Object &value );
+  Py::Object getattr( const char *_name );
+  FT2Image image;
+
+private:
+  Py::Dict __dict__;
   FT_Face       face;
-
   FT_Matrix     matrix;                 /* transformation matrix */
   FT_Vector     pen;                    /* untransformed origin  */
   FT_Error      error;
-  FT_Glyph      glyphs[MAXGLYPHS];
-  FT_Vector     pos   [MAXGLYPHS];
-
-  GlyphObject *gms[MAXGLYPHS];
-  char          *text;
+  std::vector<FT_Glyph> glyphs;
+  std::vector<FT_Vector> pos;
+  std::vector<Glyph*> gms;
+  std::string text;
   double angle;
-  int num_chars;
-  int num_glyphs;
 
-  FT2_Image image;
-} FT2FontObject;
+
+
+  FT_BBox compute_string_bbox();
+  void load_glyphs();
+  void draw_bitmap( FT_Bitmap*  bitmap, FT_Int x, FT_Int y);
+
+  static char set_bitmap_size__doc__ [];
+  static char clear__doc__ [];
+  static char set_size__doc__ [];
+  static char set_text__doc__ [];
+  static char get_glyph__doc__ [];
+  static char get_num_glyphs__doc__ [];
+  static char load_char__doc__ [];
+  static char get_width_height__doc__ [];
+  static char write_bitmap__doc__ [];
+  static char draw_rect__doc__ [];
+  static char image_as_str__doc__ [];
+  static char draw_glyphs_to_bitmap__doc__ [];
+  static char draw_glyph_to_bitmap__doc__ [];
+  static char get_sfnt_name__doc__ [];
+
+};
+
+// the extension module
+class ft2font_module : public Py::ExtensionModule<ft2font_module>
+
+{
+public:
+  ft2font_module()
+    : Py::ExtensionModule<ft2font_module>( "ft2font" )
+  {
+    Glyph::init_type();
+    FT2Font::init_type();
+
+    add_varargs_method("FT2Font", &ft2font_module::new_ft2font, 
+		       "FT2Font");
+    initialize( "The ft2font module" );
+  }
+  
+  ~ft2font_module(); 
+  //static FT_Library ft2Library;
+  
+private:
+
+  Py::Object new_ft2font (const Py::Tuple &args);
+};
 
 
 
